--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorveteria</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header> class="cabecalho"</header>
     <header class="cabecalho">
-        <h1 class="Sorveteria"></h1>
+        <h1 class="Sorveteria">isso é um titulo</h1>
+        <p>SaborMais</p>
     </header>
     <main class="principal">
 
     </main>
     <footer class="rodape">
-
     </footer>
 </body>
 </html>
