--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> class="cabecalho"</header>
     <header class="cabecalho">
-        <h1 class="Sorveteria">isso é um titulo</h1>
-        <p>SaborMais</p>
+        <img class="cabecalho-img" src="img/Logotipo sorveteria rosa e bege ilustrado.png" alt="logo">
+         <nav class= "cabecalho-nav">
+            <a class="cabecalho-nav_link" href="#">Home</a>
+            <a class="cabecalho-nav_link" href="#">Contato</a>
+            </nav>
     </header>
     <main class="principal">
+        <section class="principal-capa">
+            <div class="principal-capa__conteudo">
+                
+            </div>
+
+        </section>
 
     </main>
     <footer class="rodape">
