--- a/index.html
+++ b/index.html
@@ -17,14 +17,18 @@
     </header>
     <main class="principal">
         <section class="principal-capa">
-            <div class="principal-capa__conteudo">
-                
-            </div>
-
+            <div class="principal-capa__combotao">
+                <div class="principal-capa__conteudo">
+                    <h1 class="principal-capa__titulo">Sabores imperdiveis</h1>
+                    <p class="principal-capa__texto"> Seja bem vindo a SaborMais, aqui </p>
+                <p class="principal-capa__texto">Venha conhecer nossa sorveteria</p>
+            </div> 
+            <img src="img/logo.png" alt="">
+            <a href="#" class="principal_capa__botao">faça seu pedido!</a>
         </section>
 
-    </main>
-    <footer class="rodape">
+    </main
+    <footer> class="rodape">
     </footer>
 </body>
 </html>
