--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <img class="cabecalho-img" src="img/Logotipo sorveteria rosa e bege ilustrado.png" alt="logo">
+        <img class="cabecalho-img" src="img/logo.png" alt="logo">
          <nav class= "cabecalho-nav">
             <a class="cabecalho-nav_link" href="#">Home</a>
             <a class="cabecalho-nav_link" href="#">Contato</a>
@@ -23,12 +23,12 @@
                     <p class="principal-capa__texto"> Seja bem vindo a SaborMais, aqui </p>
                 <p class="principal-capa__texto">Venha conhecer nossa sorveteria</p>
             </div> 
-            <img src="img/logo.png" alt="">
             <a href="#" class="principal_capa__botao">faça seu pedido!</a>
+        </div>
+        <img class="principal_capa__imagem" src="img/variedade.jpg" alt="" >
         </section>
 
-    </main
-    <footer> class="rodape">
-    </footer>
+    </main>
+    <footer></footer>
 </body>
 </html>
